# LiveLibs

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/com/zyl/livelibs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  PushInterface.h  RtmpPusher.cpp  VideoStream.h  native-lib.cpp
app/src/main/java/com/zhtj/plugin/im/: BaseActivity.java  Constans.java  FFmpegApplication.java
app/src/main/java/com/zhtj/plugin/im/srt/: LiveSrtActivity.java
app/src/main/java/com/zhtj/plugin/im/ui/: LiveActivity.java  LiveSRTActivity.java  MainActivity.java  NewPlayerActivity.java  PlayerActivity.java
app/src/main/java/com/zyl/livelibs/: BaseActivity.java  Constans.java  FFmpegApplication.java  MainActivity.java
app/src/main/java/com/zyl/livelibs/camera/: Camera2Helper.java  Camera2Listener.java  CameraHelper.java  CameraType.java
app/src/main/java/com/zyl/livelibs/handler/: ConnectionReceiver.java  OrientationHandler.java
app/src/main/java/com/zyl/livelibs/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java  OnNetworkChangeListener.java
app/src/main/java/com/zyl/livelibs/param/: AudioParam.java  VideoParam.java
app/src/main/java/com/zyl/livelibs/stream/: AudioStream.java  LivePusherNew.java  VideoStream.java  VideoStreamBase.java  VideoStreamNew.java
app/src/main/java/com/zyl/livelibs/ui/: LiveActivity.java  MainActivity.java  PlayerActivity.java
app/src/main/java/com/zyl/livelibs/util/: YuvUtil.java
app/src/main/res/drawable/: icn_media_pause.xml  icn_media_play.xml
app/src/main/res/layout/: activity_live.xml  activity_live_srt.xml  activity_main.xml  activity_newplayer.xml  activity_player.xml  activity_srt_live.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/zyl/livelibs/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
live/: build.gradle
live/src/androidTest/java/com/zhtj/live/: ExampleInstrumentedTest.java
live/src/androidTest/java/com/zyl/live/: ExampleInstrumentedTest.java
live/src/main/: AndroidManifest.xml
live/src/main/cpp/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  RtmpPusher.cpp  SrtPush.cpp  SrtPusher.cpp  VideoStream.cpp  native-lib.cpp
live/src/main/cpp/avkcpdemuxer/: avkcpc.c  avkcpd.c  avkcpd.h
live/src/main/cpp/ffrdpdemuxer/: ffrdpc.c  ffrdpd.c  ffrdpd.h
live/src/main/cpp/include/faac/: faaccfg.h
live/src/main/cpp/include/libavcodec/: avcodec.h
live/src/main/cpp/include/libavformat/: avformat.h
live/src/main/cpp/include/x86_64/faac/: faac.h
live/src/main/cpp/player/: fanplayer_jni.cpp  ffrender.c  recorder.h
live/src/main/java/com/zhtj/plugin/im/live/camera/: Camera2Helper.java  Camera2Listener.java  CameraHelper.java  CameraType.java
live/src/main/java/com/zhtj/plugin/im/live/handler/: ConnectionReceiver.java  OrientationHandler.java
live/src/main/java/com/zhtj/plugin/im/live/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java  OnNetworkChangeListener.java
live/src/main/java/com/zhtj/plugin/im/live/param/: AudioParam.java  VideoParam.java
live/src/main/java/com/zhtj/plugin/im/live/srt/: DataInfo.java  JNISrt.java  JniPush.java  MediaCodecUtils.java  OnDecodeListener.java  OnSupportListener.java  SLSAudioAec.java  SLSAudioDecoder.java  SLSMediaCodec.java  SLSSurfaceView.java  SLSTSDemuxer.java  SLSVideoDecoder.java  SrsAudioCapture.java  SrsCameraView.java  SrsEncoder.java  SrsMultiCastPublisher.java  SrsPlayManager.java  SrsPublishManager.java  SrsPublisher.java  SrsSRTPublisher.java  SrsTSMuxer.java
live/src/main/java/com/zhtj/plugin/im/live/stream/: AudioStream.java  (+4 more)
live/src/main/java/com/zyl/live/camera/: Camera2Helper.java  Camera2Listener.java  CameraHelper.java  CameraType.java
live/src/main/java/com/zyl/live/handler/: ConnectionReceiver.java  OrientationHandler.java
live/src/main/java/com/zyl/live/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java  OnNetworkChangeListener.java
live/src/main/java/com/zyl/live/param/: AudioParam.java  VideoParam.java
live/src/main/java/com/zyl/live/player/: MediaPlayer.java  playerView.java
live/src/main/java/com/zyl/live/stream/: AudioStream.java  LivePusherNew.java  VideoStream.java  VideoStreamBase.java  VideoStreamNew.java
live/src/main/java/com/zyl/live/util/: YuvUtil.java
live/src/main/res/values/: strings.xml
live/src/test/java/com/zhtj/live/: ExampleUnitTest.java
live/src/test/java/com/zyl/live/: ExampleUnitTest.java
player/: .gitignore  build.gradle  proguard-rules.pro
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  SrtPull.cpp
player/src/main/cpp/avkcpdemuxer/: avkcpd.c
player/src/main/cpp/src/: adev-android.cpp  adev-win.c  adev.h  dxva2hwa.c  fanplayer_jni.cpp  ffplayer.c  ffrender.c  vdev-cmn.c  vdev-d3d.c  vdev-gdi.c  vdev.h
player/src/main/java/com/rockcarry/fanplayer/: MainActivity.java  MediaPlayer.java  PlayerView.java
player/src/main/java/com/zhtj/plugin/im/liveplayer/: MediaPlayer.java  PlayerView.java
srtplayer/: CMakeLists.txt  build.gradle
srtplayer/src/main/: AndroidManifest.xml
srtplayer/src/main/java/com/zhtj/plugin/im/srtplayer/: DataInfo.java  JniPull.java  MediaCodecUtils.java  SLSAudioDecoder.java  SLSMediaCodec.java  SLSSurfaceView.java  SLSTSDemuxer.java  SLSVideoDecoder.java  SrsPlayManager.java  SrsSRTReceiver.java
srtplayer/src/main/jni/: SrtPull.cpp
srtplayer/src/main/jni/include/openssl/: opensslconf.h
srtplayer/src/main/res/values/: strings.xml
srtplayer/src/main/res/values-night/: themes.xml
(+11 files in other folders)
